PBSawatea Changes
=================
Authors : RH  = Rowan Haigh
          AME = Andrew Edwards

0.10  2012-10-16  Rowan
  - Updated function 'readAD' to handle inactive data identified by "###" as opposed to comments identified by "#". (RH 10/16)
  - Updated functions 'pltmpdGraphs' and 'plt.mcmcGraphs' (e.g., lower panel of pairs plot reports the correlation coefficient). (AME 10/15)
  - Updated function 'runSweaveMCMC' and 'run-masterMCMC.Snw' to accommodate variable numbers of pairs plots. (RH 9/10)
  - Tweaked margins for figures in function 'plotIndexNotLattice'; updated Rd files. (RH 9/6)
  - Updated functions in R files 'runSweave.r', 'runSweaveMCMC.r', and 'PBSscape.r';
	separated menu functions from 'PBSscape.r' to 'menuFuns.r'. (RH 8/21)
  - Updated Sweave files 'run-master.Snw' and 'run-masterMCMC.Snw'. (8/21)
  - Updated functions 'plt.mcmcGraphs' and 'plotSnail' to work more generally. (AME 8/17)
  - Cleaned and debugged 'run-masterMCMC.Snw' further; still not finished for fixed M & H options. (AME 8/17)
  - Updated 'panel.curve' in  function 'plotDensPOPparsPrior'. (AME 8/16)
  - Re-wrote the function that selects and generates prior distributions using 'switch'. (AME 8/15)
  - Fixed bug in function 'plotVBcatch'. (AME 8/15)
  - Debugged 'run-masterMCMC.Snw' up to prior functions section (AME will take it from there). (RH 8/14)
  - Resolved a minor bug in the function 'findTarget' which crashed when number of projection years were too short to calculate generation-time reference criteria. (8/14)
  - Added new function 'importEva' to import the Hessian eiganvalues from an Awatea file, usually called 'Awatea.eva'. (RH 8/10)
  - Updated 'plotBars' to determine start year from results file. (RH 8/10)
  - Added new function 'importLik' to import an Awatea likelihood file, usually called 'likelihood.dat'. (RH 8/10)
  - Added 'input' directory for the Awatea input files used; format = spp-area-run.txt. (RH 8/2)