@@ -223,7 +223,7 @@ Awatea first determines the mode of the posterior distribution (MPD) for each es
 
 Residuals to the MPD model fits are provided for the ***three survey indices (Figures **** to ****), and the two*** sets of age data (Figures \ref{fig:commAgeResids} and ***). These further suggest that the model fits are consistent with the data, as do the mean ages for the two*** sets of age data (Figure \ref{fig:meanAge}).
 
-Figure \ref{fig:stockRecruit} shows the resulting stock-recruitment function and the MPD values of recruitment over time (though see Figure \ref{fig:recruitMCMC} for the MCMC values of recruitment). Figure \ref{fig:recDev} shows that the recruitment deviations display no trend over time, and that the auto-correlation function of the deviations appears satisfactory. The values of the log-likelihood and objective functions for the MPD fits are given in Table \ref{tab:like}.
+Figure \ref{fig:stockRecruit} shows the resulting stock-recruitment function and the MPD values of recruitment over time (though see Figure \ref{fig:recruitMCMC} for the MCMC values of recruitment). Figure \ref{fig:recDev} shows that the recruitment deviations display no trend over time, and that the auto-correlation function of the deviations appears satisfactory. Figure \ref{fig:selectivity} gives the MPD fits for the selectivities, together with ogive for female maturity. The values of the log-likelihood and objective functions for the MPD fits are given in Table \ref{tab:like}.
 
 
 
@@ -944,7 +944,7 @@ dev.off()
 
 % \sppfig{recDevAcf}{Auto-correlation function of the logged recruitment deviations ($\epsilon_t$), for years \Sexpr{yearsForACF[1]}-\Sexpr{yearsForACF[length(yearsForACF)]} (determined as the first year of commercial age data minus the plus-age class plus the age for which commercial selectivity for females is 0.5, to the final year that recruitments are calculated minus the age for which commercial selectivity for females is 0.5).}
 
-\sppfig{selectivity}{Selectivities for commercial catch (labelled `Gear 1' here) and surveys (all MPD values), with maturity ogive for females indicated by `m'.}
+\sppfig{selectivity}{Selectivities for commercial catch (labelled `Gear 1' here) and surveys (all MPD values), with maturity ogive for females indicated by `m'. ***Not automated: Selectivities are fixed for surveys ** and **.}
 
 
 % Don't need the rest for results Appendix.
